--- a/week1/slide2.html
+++ b/week1/slide2.html
@@ -11,7 +11,7 @@
 <body>
 <ul class="lectureslide">
 <li>workstations vs. production servers</li>
-<li><a href="http://www.linux-classes.com/instructions/CentOS51.html">Installing your workstation</a>
+<li><a href="../instructions/CentOS51.html">Installing your workstation</a>
 </li>
 
 <a class="pagelink" href="slide3.html">NEXT</a><br />
